updated test notebook

--- a/test.ipynb
+++ b/test.ipynb
@@ -17,14 +17,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
+    "CAM_HEIGHT=1.0\n",
+    "FX = 1.0\n",
+    "FY = 1.0\n",
+    "PX = 0\n",
+    "PY = 0\n",
+    "\n",
     "def wrap(rad):\n",
     "    \"\"\"wrap a angle between 0 to 2pi\n",
     "\n",
@@ -39,9 +38,8 @@
     "        rad+=twopi\n",
     "    return rad\n",
     "\n",
-    "def forward_ekf_single_pass(x,P,u,y,R,jacobians,\n",
-    "                            state_transition,\n",
-    "                            observation_model):\n",
+    "def forward_ekf_single_pass(x,P,u,y,R,\n",
+    "                            landmark_ind):\n",
     "    \"\"\"compute one pass of ekf update\n",
     "\n",
     "    Args:\n",
@@ -53,21 +51,19 @@
     "        jacobians (_type_): dictionary coding various jacobians\n",
     "        state_transition : state transition function\n",
     "        observation_model : measurement function\n",
-    "        \n",
     "    \"\"\"\n",
     "\n",
-    "    # jacobian of state transition w.r.t x\n",
-    "    F = jacobians[\"F\"]\n",
-    "\n",
-    "    # jacobian of state transition w.r.t process noise\n",
-    "    G = jacobians[\"G\"]\n",
-    "\n",
-    "    # jacobian of measurement model w.r.t state\n",
-    "    H = jacobians[\"H\"]\n",
+    "    # F: jacobian of state transition w.r.t x\n",
+    "    # G: jacobian of state transition w.r.t process noise\n",
+    "    F,G = state_transition_jacobian(x) # linearize around the previous mean\n",
     "\n",
     "    # ======= 1. prediction step ========= #\n",
-    "    x_pred = state_transition(x, u, 0)[\"x_next\"] # zero noise\n",
+    "    x_pred = state_transition(x, u, 0) # zero noise\n",
     "    y_pred = observation_model(x_pred)\n",
+    "\n",
+    "    # jacobian of measurement model w.r.t state\n",
+    "    H = observation_model_jacobian(x_pred,landmark_ind)\n",
+    "\n",
     "    P_ = np.linalg.multi_dot(F, P, F.T) + np.linalg.multi_dot(G)\n",
     "    S = np.linalg.multi_dot(H, P_, H.T) + R\n",
     "\n",
@@ -118,29 +114,21 @@
     "    x[1] = x[1]+vy*dt+noise[1]\n",
     "    x[2] = wrap(x[2]+wz*dt)+noise[2]\n",
     "\n",
-    "    # return jacobian\n",
+    "    return x\n",
+    "\n",
+    "def state_transition_jacobian(x):\n",
     "    n = x.shape[0]\n",
     "    jac = np.zeros((n,n))\n",
     "    jac[0,0] = 1\n",
     "    jac[1,1] = 1\n",
     "    jac[2,2] = 1\n",
     "\n",
-    "    out = edict()\n",
-    "    out.x_next = x\n",
-    "    out.F = jac\n",
-    "    out.G = jac\n",
+    "    F = jac\n",
+    "    G = jac\n",
     "\n",
-    "    return out\n",
+    "    return F,G\n",
     "\n",
-    "def observation_model(x,landmark_indices,camera_height, calibration_matrix,\n",
-    "                      hc=1.0,fx=1.0,fy=1.0,px=0,py=0):\n",
-    "    \"\"\" get the camera projection points of the landmarks\n",
-    "\n",
-    "    Args:\n",
-    "        x (_type_): _description_\n",
-    "        camera_height (_type_): _description_\n",
-    "        calibration_matrix (_type_): _description_\n",
-    "    \"\"\"\n",
+    "def cam_pose_matrix(x, hc=CAM_HEIGHT):\n",
     "    # unpack robot pose\n",
     "    xr, yr, theta = x[:2]\n",
     "\n",
@@ -153,28 +141,56 @@
     "    Trobot_inv = np.concatenate([Rrobot.T,-Rrobot.T.dot(trobot)],axis=1)\n",
     "    Trobot_inv = np.concatenate([Trobot_inv, np.array([[0,0,0,1]])],axis=0)\n",
     "\n",
-    "    Tbc_inv = np.array([[0,-1,0,0],\n",
-    "                        [0,0,-1,hc],\n",
-    "                        [1,0,0,0],\n",
-    "                        [0,0,0,1]])\n",
+    "    Tbc_inv = np.array([[0,-1, 0,  0],\n",
+    "                        [0, 0,-1, hc],\n",
+    "                        [1, 0, 0,  0],\n",
+    "                        [0, 0, 0,  1]])\n",
     "    \n",
     "    Tcam_inv = np.linalg.multi_dot([Tbc_inv, Trobot_inv])\n",
+    "    return Tcam_inv\n",
     "\n",
-    "    out = {}\n",
-    "    for ind in landmark_indices:\n",
-    "        xs,ys,zs = x[3+ind*3:3+ind*3+3]\n",
-    "        h_coord = np.array([xs,ys,zs,1])[:,np.newaxis]\n",
-    "        xs_hat, ys_hat, zs_hat,_ = Tcam_inv.dot(h_coord).flatten()\n",
+    "def get_cam_frame_coord(x, Tcam_inv, ind):\n",
+    "    xs,ys,zs = x[3+ind*3:3+ind*3+3]\n",
+    "    h_coord = np.array([xs,ys,zs,1])[:,np.newaxis]\n",
+    "    xs_hat, ys_hat, zs_hat, _ = Tcam_inv.dot(h_coord).flatten()\n",
+    "    return xs_hat, ys_hat, zs_hat\n",
     "\n",
-    "        ux = fx*xs_hat/zs_hat+px\n",
-    "        uy = fx*ys_hat/zs_hat+py\n",
+    "def project(xs_hat, ys_hat, zs_hat, fx=FX,fy=FY,px=PX,py=PY):\n",
+    "    ux = fx*xs_hat/zs_hat+px\n",
+    "    uy = fx*ys_hat/zs_hat+py\n",
+    "    return ux, uy\n",
     "\n",
-    "        # find the jacobian\n",
-    "        out[ind] = (ux,uy)\n",
+    "def observation_model(x,landmark_indices=None):\n",
+    "    \"\"\" get the camera projection points of the landmarks\n",
+    "\n",
+    "    Args:\n",
+    "        x (_type_): _description_\n",
+    "        camera_height (_type_): _description_\n",
+    "        calibration_matrix (_type_): _description_\n",
+    "    \"\"\"\n",
+    "    if landmark_indices is None:\n",
+    "        n = x.shape\n",
+    "        landmark_indices = [_ for _ in range((n-3)/3)]\n",
+    "    Tcam_inv = cam_pose_matrix(x)\n",
+    "    n_l = len(landmark_indices)\n",
+    "    out = np.zeros((n_l*2,1))\n",
+    "    for k,ind in enumerate(landmark_indices):\n",
+    "        xs_hat, ys_hat, zs_hat,_ = get_cam_frame_coord(x, Tcam_inv, ind)\n",
+    "        ux,uy = project(xs_hat, ys_hat, zs_hat)\n",
+    "        out[2*k] = ux\n",
+    "        out[2*k+1] = uy\n",
     "\n",
     "    return out\n",
     "\n",
-    "def observation_model_jacobian(xr,yr,theta,xs_hat,ys_hat, zs_hat,fx=1.0,fy=1.0):\n",
+    "def observation_model_jacobian(x,\n",
+    "                               landmark_ind,\n",
+    "                               fx=FX,fy=FY):\n",
+    "    Tcam_inv = cam_pose_matrix(x)\n",
+    "    ind = landmark_ind\n",
+    "\n",
+    "    xs_hat, ys_hat, zs_hat,_ = get_cam_frame_coord(x, Tcam_inv, ind)\n",
+    "    theta = x[2]\n",
+    "\n",
     "    # A equals xs_hat\n",
     "    A = xs_hat\n",
     "    B = zs_hat\n",
@@ -184,16 +200,35 @@
     "    s = sin(theta)\n",
     "\n",
     "    # dux/dvar\n",
-    "    dux_dxr = fx*(-B_inv*s + A_B2*c)\n",
+    "    dux_dxr = fx*(-B_inv*s+A_B2*c)\n",
     "    dux_dyr = fx*(B_inv*c+A_B2*s)\n",
     "    dux_dtheta = fx*(1+A*A_B2)\n",
     "    dux_dxs = fx*(B_inv*s-A_B2*c)\n",
     "    dux_dys = fx*(-B_inv*c-A_B2*s)\n",
+    "    dux_dzs = 0\n",
     "\n",
     "    # duy/dvar\n",
-    "    A = \n",
+    "    tmp = fy*ys_hat/(-zs_hat**2)\n",
+    "    duy_dxr = tmp*(-c)\n",
+    "    duy_dyr = tmp*(-s)\n",
+    "    duy_dtheta = tmp*(-xs_hat)\n",
+    "    duy_dxs = tmp*c\n",
+    "    duy_dys = tmp*s\n",
+    "    duy_dzs = -fy/zs_hat\n",
     "\n",
-    "    "
+    "    Jr = np.array([[dux_dxr, dux_dyr, dux_dtheta],\n",
+    "                   [duy_dxr, duy_dyr, duy_dtheta]])\n",
+    "    \n",
+    "    Jl = np.array([[dux_dxs, dux_dys, dux_dzs],\n",
+    "                   [duy_dxs, duy_dys, duy_dzs]])\n",
+    "    \n",
+    "    N = 3+3*4\n",
+    "    H = np.zeros((2,N))\n",
+    "    H[:,:3] = Jr\n",
+    "    i = landmark_ind\n",
+    "    H[:,3+i*3:3+i*3+3] = Jl\n",
+    "\n",
+    "    return H"
    ]
   },
   {
@@ -205,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,59 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle \\left[\\begin{matrix}\\cos{\\left(\\theta \\right)} & - \\sin{\\left(\\theta \\right)} & 0\\\\\\sin{\\left(\\theta \\right)} & \\cos{\\left(\\theta \\right)} & 0\\\\0 & 0 & 1\\end{matrix}\\right]$"
-      ],
-      "text/plain": [
-       "Matrix([\n",
-       "[cos(\\theta), -sin(\\theta), 0],\n",
-       "[sin(\\theta),  cos(\\theta), 0],\n",
-       "[          0,            0, 1]])"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Rrobot"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle \\left[\\begin{matrix}x_{r}\\\\y_{r}\\\\0\\end{matrix}\\right]$"
-      ],
-      "text/plain": [
-       "Matrix([\n",
-       "[x_r],\n",
-       "[y_r],\n",
-       "[  0]])"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "trobot"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +280,7 @@
        "[          0,            0, 0,   1]])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +314,7 @@
        "[           0,           0, 0,                                  1]])"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +343,7 @@
        "[ 0,  0, 0,   1]])"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +377,7 @@
        "[0,  0,  0,   1]])"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +405,7 @@
        "[          0,            0,  0,                                  1]])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -434,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +429,7 @@
        "X_s*sin(\\theta) - Y_s*cos(\\theta) - x_r*sin(\\theta) + y_r*cos(\\theta)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -459,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +454,7 @@
        "-Z_s + h_c"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +478,7 @@
        "X_s*cos(\\theta) + Y_s*sin(\\theta) - x_r*cos(\\theta) - y_r*sin(\\theta)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -514,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +509,7 @@
        "f_x*(X_s*sin(\\theta) - Y_s*cos(\\theta) - x_r*sin(\\theta) + y_r*cos(\\theta))/(X_s*cos(\\theta) + Y_s*sin(\\theta) - x_r*cos(\\theta) - y_r*sin(\\theta)) + p_x"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -538,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +533,7 @@
        "f_x*(X_s*sin(\\theta) - Y_s*cos(\\theta) - x_r*sin(\\theta) + y_r*cos(\\theta))*cos(\\theta)/(X_s*cos(\\theta) + Y_s*sin(\\theta) - x_r*cos(\\theta) - y_r*sin(\\theta))**2 - f_x*sin(\\theta)/(X_s*cos(\\theta) + Y_s*sin(\\theta) - x_r*cos(\\theta) - y_r*sin(\\theta))"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -561,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -573,7 +556,7 @@
        "f_x*(X_s*sin(\\theta) - Y_s*cos(\\theta) - x_r*sin(\\theta) + y_r*cos(\\theta))*sin(\\theta)/(X_s*cos(\\theta) + Y_s*sin(\\theta) - x_r*cos(\\theta) - y_r*sin(\\theta))**2 + f_x*cos(\\theta)/(X_s*cos(\\theta) + Y_s*sin(\\theta) - x_r*cos(\\theta) - y_r*sin(\\theta))"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -584,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -596,7 +579,7 @@
        "f_x*(X_s*sin(\\theta) - Y_s*cos(\\theta) - x_r*sin(\\theta) + y_r*cos(\\theta))**2/(X_s*cos(\\theta) + Y_s*sin(\\theta) - x_r*cos(\\theta) - y_r*sin(\\theta))**2 + f_x"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -607,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -619,7 +602,7 @@
        "-f_x*(X_s*sin(\\theta) - Y_s*cos(\\theta) - x_r*sin(\\theta) + y_r*cos(\\theta))*cos(\\theta)/(X_s*cos(\\theta) + Y_s*sin(\\theta) - x_r*cos(\\theta) - y_r*sin(\\theta))**2 + f_x*sin(\\theta)/(X_s*cos(\\theta) + Y_s*sin(\\theta) - x_r*cos(\\theta) - y_r*sin(\\theta))"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -630,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -642,13 +625,36 @@
        "-f_x*(X_s*sin(\\theta) - Y_s*cos(\\theta) - x_r*sin(\\theta) + y_r*cos(\\theta))*sin(\\theta)/(X_s*cos(\\theta) + Y_s*sin(\\theta) - x_r*cos(\\theta) - y_r*sin(\\theta))**2 - f_x*cos(\\theta)/(X_s*cos(\\theta) + Y_s*sin(\\theta) - x_r*cos(\\theta) - y_r*sin(\\theta))"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "diff(ux, ys)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle 0$"
+      ],
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "diff(ux, zs)"
    ]
   },
   {
@@ -660,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -672,7 +678,7 @@
        "f_y*(-Z_s + h_c)/(X_s*cos(\\theta) + Y_s*sin(\\theta) - x_r*cos(\\theta) - y_r*sin(\\theta)) + p_y"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -795,6 +801,29 @@
    ],
    "source": [
     "diff(uy, ys)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle - \\frac{f_{y}}{X_{s} \\cos{\\left(\\theta \\right)} + Y_{s} \\sin{\\left(\\theta \\right)} - x_{r} \\cos{\\left(\\theta \\right)} - y_{r} \\sin{\\left(\\theta \\right)}}$"
+      ],
+      "text/plain": [
+       "-f_y/(X_s*cos(\\theta) + Y_s*sin(\\theta) - x_r*cos(\\theta) - y_r*sin(\\theta))"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "diff(uy, zs)"
    ]
   }
  ],
