started coding derivative

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "from numpy import cos, sin\n",
     "from scipy.optimize import minimize\n",
+    "from scipy.linalg import block_diag\n",
     "from easydict import EasyDict as edict"
    ]
   },
@@ -23,6 +24,8 @@
     "FY = 1.0\n",
     "PX = 0\n",
     "PY = 0\n",
+    "PROCESS_NOISE_COV = np.diag([0.1,0.1,0.01]) # robot pose, (x,y,theta)\n",
+    "OBS_NOISE_COV = np.diag([1,1]) # pixel coord, (ux, uy)\n",
     "\n",
     "def wrap(rad):\n",
     "    \"\"\"wrap a angle between 0 to 2pi\n",
@@ -38,8 +41,11 @@
     "        rad+=twopi\n",
     "    return rad\n",
     "\n",
-    "def forward_ekf_single_pass(x,P,u,y,R,\n",
-    "                            landmark_ind):\n",
+    "def forward_ekf_single_pass(x,P,u,\n",
+    "                            Q=PROCESS_NOISE_COV,\n",
+    "                            R=OBS_NOISE_COV,\n",
+    "                            y=None,\n",
+    "                            landmark_ind=None):\n",
     "    \"\"\"compute one pass of ekf update\n",
     "\n",
     "    Args:\n",
@@ -60,18 +66,21 @@
     "    # ======= 1. prediction step ========= #\n",
     "    x_pred = state_transition(x, u, 0) # zero noise\n",
     "    y_pred = observation_model(x_pred)\n",
+    "    n_obs = len(y_pred)\n",
     "\n",
     "    # jacobian of measurement model w.r.t state\n",
     "    H = observation_model_jacobian(x_pred,landmark_ind)\n",
     "\n",
-    "    P_ = np.linalg.multi_dot(F, P, F.T) + np.linalg.multi_dot(G)\n",
-    "    S = np.linalg.multi_dot(H, P_, H.T) + R\n",
+    "    P_ = np.linalg.multi_dot([F, P, F.T]) + np.linalg.multi_dot([G,Q,G.T])\n",
+    "    S = np.linalg.multi_dot(H, P_, H.T) + block_diag(*[R for _ in range(n_obs)])\n",
     "\n",
     "    # Kalman gain\n",
     "    K = np.linalg.multi_dot(P_, H.T, np.linalg.inv(S))\n",
     "\n",
     "    # ======= 2. correction step ========= #\n",
     "    n = x.shape[0]\n",
+    "    if y is None: # no real observation\n",
+    "        y = y_pred\n",
     "    x_next = x + K.dot(y-y_pred)\n",
     "    P_next = (np.eye(n)-K.dot(H)).dot(P)\n",
     "\n",
@@ -92,6 +101,88 @@
     "    out.K = K\n",
     "\n",
     "    return out\n",
+    "\n",
+    "def forward_ekf_multiple_pass(x0,P0,u_list,R):\n",
+    "    n_pass = u_list\n",
+    "    x = x0\n",
+    "    P = P0\n",
+    "    for i in range(n_pass):\n",
+    "        out = forward_ekf_single_pass(x,P,u_list[i])\n",
+    "        x = out.x_next\n",
+    "        P = out.P_next\n",
+    "\n",
+    "    # return the trace of the normalized final cov matrix (premultiply with P0\n",
+    "    # inverse)\n",
+    "    return np.trace(np.linalg.inv(P0).dot(P))\n",
+    "\n",
+    "def loss_func(vars,x0,P0,x_dim=15,u_dim=3):\n",
+    "    \"\"\"the loss function to be minimized by the scipy.optimize.minimize function\n",
+    "    vars consist of a series of both state x and control input u. \n",
+    "\n",
+    "    Args:\n",
+    "        vars (_type_): _description_\n",
+    "    \"\"\"\n",
+    "    Q = PROCESS_NOISE_COV\n",
+    "    R = OBS_NOISE_COV\n",
+    "\n",
+    "    # unpack vars, supposing xt,ut,xt+1,ut+1\n",
+    "    dim = x_dim+u_dim\n",
+    "    n_pass = vars.shape[0]/dim\n",
+    "    x_prev = x0\n",
+    "    P = P0\n",
+    "    cache = [None]*n_pass\n",
+    "    for i in range(n_pass):\n",
+    "        # the jacobians are evaluated at the series of x's\n",
+    "        x = vars[i*dim:i*dim+3]\n",
+    "        u = vars[i*dim+3:(i+1)*dim]\n",
+    "\n",
+    "        # evaluate jacobian w.r.t state at the previous state\n",
+    "        F,G = state_transition_jacobian(x_prev)\n",
+    "\n",
+    "        x_pred = state_transition(x_prev, u, 0) # zero noise\n",
+    "        y_pred = observation_model(x_pred)\n",
+    "        n_obs = len(y_pred)\n",
+    "\n",
+    "        # jacobian of measurement model w.r.t state\n",
+    "        H = observation_model_jacobian(x_pred)\n",
+    "\n",
+    "        P_ = np.linalg.multi_dot([F,P,F.T]) + np.linalg.multi_dot([G,Q,G.T])\n",
+    "        R_ = block_diag(*[R for _ in range(n_obs)])\n",
+    "        S = np.linalg.multi_dot(H, P_, H.T)+R_\n",
+    "\n",
+    "        # Kalman gain\n",
+    "        K = np.linalg.multi_dot(P_, H.T, np.linalg.inv(S))\n",
+    "\n",
+    "        # update cov P\n",
+    "        I_KH = (np.eye(x_dim)-K.dot(H))\n",
+    "        P_next = I_KH.dot(P)\n",
+    "\n",
+    "        cache[i] = (F,G,H,K,P,P_,P_next,R_,I_KH)\n",
+    "        P = P_next\n",
+    "\n",
+    "        x_prev = x\n",
+    "\n",
+    "    # compute gradient\n",
+    "    # ref: Benhamou, J., Bonnabel, S., & Chapdelaine, C. (2024). \n",
+    "    # Backpropagation-Based Analytical Derivatives of EKF Covariance for Active \n",
+    "    # Sensing. arXiv preprint arXiv:2402.17569. \n",
+    "\n",
+    "    dL_dPNN = init_backprop()\n",
+    "\n",
+    "    for i in np.arange(n_pass-1,-1,-1):\n",
+    "        # unpack cache\n",
+    "        F,G,H,K,Pnm1,Pn_nm1,Pn,R,I_KH = cache[i]\n",
+    "\n",
+    "        # dL/dPn|(n-1)\n",
+    "        tmp = \n",
+    "        dL_dPn_nm1 = np.linalg.multi_dot([])\n",
+    "\n",
+    "\n",
+    "    return np.trace(np.linalg.inv(P0).dot(P))\n",
+    "\n",
+    "def init_backprop():\n",
+    "    pass\n",
+    "\n",
     "\n",
     "def state_transition(x, u, noise, dt=0.1):\n",
     "    \"\"\"state transition of a omnidirectional wheeled robot commanded by linear \n",
@@ -229,6 +320,27 @@
     "    H[:,3+i*3:3+i*3+3] = Jl\n",
     "\n",
     "    return H"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.zeros(9)\n",
+    "a.shape[0]"
    ]
   },
   {
