updated derivative coding

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,12 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "from numpy import cos, sin\n",
+    "from numpy.linalg import inv as matinv\n",
+    "from numpy.linalg import multi_dot\n",
     "from scipy.optimize import minimize\n",
     "from scipy.linalg import block_diag\n",
     "from easydict import EasyDict as edict"
@@ -19,7 +21,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "CAM_HEIGHT=1.0\n",
+    "DELTA_T = 0.1\n",
+    "CAM_HEIGHT = 1.0\n",
     "FX = 1.0\n",
     "FY = 1.0\n",
     "PX = 0\n",
@@ -71,11 +74,11 @@
     "    # jacobian of measurement model w.r.t state\n",
     "    H = observation_model_jacobian(x_pred,landmark_ind)\n",
     "\n",
-    "    P_ = np.linalg.multi_dot([F, P, F.T]) + np.linalg.multi_dot([G,Q,G.T])\n",
-    "    S = np.linalg.multi_dot(H, P_, H.T) + block_diag(*[R for _ in range(n_obs)])\n",
+    "    P_ = multi_dot([F, P, F.T]) + multi_dot([G,Q,G.T])\n",
+    "    S = multi_dot(H, P_, H.T) + block_diag(*[R for _ in range(n_obs)])\n",
     "\n",
     "    # Kalman gain\n",
-    "    K = np.linalg.multi_dot(P_, H.T, np.linalg.inv(S))\n",
+    "    K = multi_dot(P_, H.T, np.linalg.inv(S))\n",
     "\n",
     "    # ======= 2. correction step ========= #\n",
     "    n = x.shape[0]\n",
@@ -115,7 +118,7 @@
     "    # inverse)\n",
     "    return np.trace(np.linalg.inv(P0).dot(P))\n",
     "\n",
-    "def loss_func(vars,x0,P0,x_dim=15,u_dim=3):\n",
+    "def loss_func(vars,x0,P0,x_dim=15,u_dim=3,dt=DELTA_T):\n",
     "    \"\"\"the loss function to be minimized by the scipy.optimize.minimize function\n",
     "    vars consist of a series of both state x and control input u. \n",
     "\n",
@@ -146,18 +149,18 @@
     "        # jacobian of measurement model w.r.t state\n",
     "        H = observation_model_jacobian(x_pred)\n",
     "\n",
-    "        P_ = np.linalg.multi_dot([F,P,F.T]) + np.linalg.multi_dot([G,Q,G.T])\n",
+    "        P_ = multi_dot([F,P,F.T]) + multi_dot([G,Q,G.T])\n",
     "        R_ = block_diag(*[R for _ in range(n_obs)])\n",
-    "        S = np.linalg.multi_dot(H, P_, H.T)+R_\n",
+    "        S = multi_dot(H, P_, H.T)+R_\n",
     "\n",
     "        # Kalman gain\n",
-    "        K = np.linalg.multi_dot(P_, H.T, np.linalg.inv(S))\n",
+    "        K = multi_dot(P_, H.T, matinv(S))\n",
     "\n",
     "        # update cov P\n",
     "        I_KH = (np.eye(x_dim)-K.dot(H))\n",
     "        P_next = I_KH.dot(P)\n",
     "\n",
-    "        cache[i] = (F,G,H,K,P,P_,P_next,R_,I_KH)\n",
+    "        cache[i] = (F,G,H,K,P,P_,P_next,Q,R_,I_KH)\n",
     "        P = P_next\n",
     "\n",
     "        x_prev = x\n",
@@ -167,15 +170,44 @@
     "    # Backpropagation-Based Analytical Derivatives of EKF Covariance for Active \n",
     "    # Sensing. arXiv preprint arXiv:2402.17569. \n",
     "\n",
-    "    dL_dPNN = init_backprop()\n",
-    "\n",
+    "    dL_dPn, dL_dxn = init_backprop()\n",
+    "    # dL_dxn is a column vector\n",
     "    for i in np.arange(n_pass-1,-1,-1):\n",
     "        # unpack cache\n",
-    "        F,G,H,K,Pnm1,Pn_nm1,Pn,R,I_KH = cache[i]\n",
+    "        F,G,H,K,Pnm1,Pn_nm1,Pn,Q,R,I_KH = cache[i]\n",
     "\n",
     "        # dL/dPn|(n-1)\n",
-    "        tmp = \n",
-    "        dL_dPn_nm1 = np.linalg.multi_dot([])\n",
+    "        dL_dPn_nm1 = multi_dot([I_KH.T,dL_dPn,I_KH])\n",
+    "\n",
+    "        # dL/dP(n-1)|(n-1)\n",
+    "        dL_dPnm1 = multi_dot([F.T,dL_dPn_nm1,F])\n",
+    "\n",
+    "        # dL/dFn\n",
+    "        dL_dFn = 2*multi_dot([dL_dPn_nm1, F, Pnm1])\n",
+    "\n",
+    "        # dL/dGn\n",
+    "        dL_dGn = 2*multi_dot([dL_dPn_nm1, G, Q])\n",
+    "\n",
+    "        # dL/dHn\n",
+    "        dL_dHn = -2*multi_dot([Pn, dL_dPn, Pn, H.T, matinv(R)])\n",
+    "\n",
+    "        # dL/dRn\n",
+    "        dL_dRn = None # the paper calculates this term, but our implementation \n",
+    "                      # does not have Rn depending on x\n",
+    "        \n",
+    "        # compute gradient for u, element-wise\n",
+    "        dL_du = np.zeros((u_dim,1))\n",
+    "        for i in range(u_dim):\n",
+    "            # first two terms in the paper are 0\n",
+    "            tmp = np.zeros((x_dim,1))\n",
+    "            tmp[i] = dt\n",
+    "            dL_du[i,0] = np.trace(multi_dot([dL_dxn.T,tmp]))\n",
+    "\n",
+    "        dL_dx = np.zeros((x_dim,1))\n",
+    "        for i in range(x_dim):\n",
+    "            \n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "    return np.trace(np.linalg.inv(P0).dot(P))\n",
@@ -237,7 +269,7 @@
     "                        [1, 0, 0,  0],\n",
     "                        [0, 0, 0,  1]])\n",
     "    \n",
-    "    Tcam_inv = np.linalg.multi_dot([Tbc_inv, Trobot_inv])\n",
+    "    Tcam_inv = multi_dot([Tbc_inv, Trobot_inv])\n",
     "    return Tcam_inv\n",
     "\n",
     "def get_cam_frame_coord(x, Tcam_inv, ind):\n",
@@ -324,23 +356,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "9"
+       "array([[0.5, 0. , 0. ],\n",
+       "       [0. , 0.5, 0. ],\n",
+       "       [0. , 0. , 0.5]])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a = np.zeros(9)\n",
-    "a.shape[0]"
+    "a = 2*np.eye(3)\n",
+    "matinv(a)"
    ]
   },
   {
