updated derivative calculation

--- a/test.ipynb
+++ b/test.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,149 @@
     "PX = 0\n",
     "PY = 0\n",
     "PROCESS_NOISE_COV = np.diag([0.1,0.1,0.01]) # robot pose, (x,y,theta)\n",
-    "OBS_NOISE_COV = np.diag([1,1]) # pixel coord, (ux, uy)\n",
+    "OBS_NOISE_COV = np.diag([1,1]) # pixel coord, (ux, uy)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## SymPy Definitions\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sympy import symbols, Matrix, BlockMatrix, lambdify\n",
+    "from sympy import cos as c\n",
+    "from sympy import sin as s\n",
+    "from sympy import diff\n",
+    "xr, yr, t, xs, ys, zs = symbols(\"x_r y_r \\\\theta X_s Y_s Z_s\")\n",
+    "hc = symbols(\"h_c\")\n",
+    "fx, fy, px, py = symbols(\"f_x f_y p_x p_y\")\n",
+    "\n",
+    "Rrobot = Matrix([[c(t), -s(t), 0],\n",
+    "                 [s(t),  c(t), 0],\n",
+    "                 [0,     0,    1]])\n",
+    "trobot = Matrix([[xr],[yr],[0]])\n",
+    "tmp = Matrix(BlockMatrix([Rrobot,trobot]))\n",
+    "Trobot = Matrix([[tmp],[0,0,0,1]])\n",
+    "\n",
+    "tmp = Matrix(BlockMatrix([Rrobot.transpose(),-Rrobot.transpose()*trobot]))\n",
+    "Trobot_inv = Matrix([[tmp],[0,0,0,1]])\n",
+    "\n",
+    "Rbc = Matrix([[0,  0, 1],\n",
+    "                 [-1, 0, 0],\n",
+    "                 [0, -1, 0]])\n",
+    "tbc = Matrix([[0],[0],[hc]])\n",
+    "tmp = Matrix(BlockMatrix([Rbc,tbc]))\n",
+    "Tbc = Matrix([[tmp],[0,0,0,1]])\n",
+    "\n",
+    "Tbc_inv = Tbc.inv()\n",
+    "Tcam_inv = Tbc_inv*Trobot_inv\n",
+    "Tcam_inv\n",
+    "\n",
+    "coord_cam_frame = Tcam_inv*Matrix([[xs],[ys],[zs],[1]])\n",
+    "xs_hat = coord_cam_frame[0]\n",
+    "ys_hat = coord_cam_frame[1]\n",
+    "zs_hat = coord_cam_frame[2]\n",
+    "\n",
+    "ux = fx*xs_hat/zs_hat + px\n",
+    "uy = fy*ys_hat/zs_hat + py\n",
+    "\n",
+    "dux_dxr = diff(ux, xr)\n",
+    "dux_dyr = diff(ux, yr)\n",
+    "dux_dt  = diff(ux, t)\n",
+    "dux_dxs = diff(ux, xs)\n",
+    "dux_dys = diff(ux, ys)\n",
+    "dux_dzs = diff(ux, zs)\n",
+    "\n",
+    "duy_dxr = diff(uy, xr)\n",
+    "duy_dyr = diff(uy, yr)\n",
+    "duy_dt  = diff(uy, t)\n",
+    "duy_dxs = diff(uy, xs)\n",
+    "duy_dys = diff(uy, ys)\n",
+    "duy_dzs = diff(uy, zs)\n",
+    "\n",
+    "Hr = Matrix([[dux_dxr, dux_dyr, dux_dt],\n",
+    "             [duy_dxr, duy_dyr, duy_dt]])\n",
+    "\n",
+    "Hs = Matrix([[dux_dxs,dux_dys,dux_dzs],\n",
+    "             [duy_dxs,duy_dys,duy_dzs]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# define lambda functions to calculate H w.r.t robot pose (Hr) and w.r.t scene\n",
+    "# point (Hs)\n",
+    "Hr_fcn = lambdify([xr,yr,t,xs,ys,zs,hc,fx,fy,px,py],Hr,\"numpy\")\n",
+    "Hs_fcn = lambdify([xr,yr,t,xs,ys,zs,hc,fx,fy,px,py],Hs,\"numpy\")\n",
+    "\n",
+    "def fill_default(f):\n",
+    "    return lambda xr,yr,t,xs,ys,zs: f(xr,yr,t,xs,ys,zs,CAM_HEIGHT,FX,FY,PX,PY)\n",
+    "\n",
+    "input_vars = [xr,yr,t,xs,ys,zs,hc,fx,fy,px,py]\n",
+    "\n",
+    "dHr_dxr = fill_default(lambdify(input_vars,diff(Hr,xr),\"numpy\"))\n",
+    "dHr_dyr = fill_default(lambdify(input_vars,diff(Hr,yr),\"numpy\"))\n",
+    "dHr_dt  = fill_default(lambdify(input_vars,diff(Hr,t),\"numpy\"))\n",
+    "dHr_dxs = fill_default(lambdify(input_vars,diff(Hr,xs),\"numpy\"))\n",
+    "dHr_dys = fill_default(lambdify(input_vars,diff(Hr,ys),\"numpy\"))\n",
+    "dHr_dzs = fill_default(lambdify(input_vars,diff(Hr,zs),\"numpy\"))\n",
+    "\n",
+    "dHs_dxr = fill_default(lambdify(input_vars,diff(Hs,xr),\"numpy\"))\n",
+    "dHs_dyr = fill_default(lambdify(input_vars,diff(Hs,yr),\"numpy\"))\n",
+    "dHs_dt  = fill_default(lambdify(input_vars,diff(Hs,t),\"numpy\"))\n",
+    "dHs_dxs = fill_default(lambdify(input_vars,diff(Hs,xs),\"numpy\"))\n",
+    "dHs_dys = fill_default(lambdify(input_vars,diff(Hs,ys),\"numpy\"))\n",
+    "dHs_dzs = fill_default(lambdify(input_vars,diff(Hs,zs),\"numpy\"))\n",
+    "\n",
+    "def dHn_dxn(x):\n",
+    "    \"\"\"calculate the derivative of observation Jacobian H w.r.t state variable\n",
+    "    x\n",
+    "\n",
+    "    Args:\n",
+    "        x (_type_): _description_\n",
+    "    \"\"\"\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 48.79438373,  42.34450837, -26.0291731 ],\n",
+       "       [ -6.5349072 ,  -8.86937629,   5.01589975]])"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dHr_dxs(*np.random.rand(6))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
     "\n",
     "def wrap(rad):\n",
     "    \"\"\"wrap a angle between 0 to 2pi\n",
@@ -170,30 +312,40 @@
     "    # Backpropagation-Based Analytical Derivatives of EKF Covariance for Active \n",
     "    # Sensing. arXiv preprint arXiv:2402.17569. \n",
     "\n",
-    "    dL_dPn, dL_dxn = init_backprop()\n",
-    "    # dL_dxn is a column vector\n",
+    "    dL_dPn, dL_dxn = init_backprop() # dL_dxn is a column vector\n",
+    "\n",
+    "    # calculate derivative w.r.t the matrices\n",
+    "    dmat = [None]*n_pass\n",
     "    for i in np.arange(n_pass-1,-1,-1):\n",
     "        # unpack cache\n",
-    "        F,G,H,K,Pnm1,Pn_nm1,Pn,Q,R,I_KH = cache[i]\n",
+    "        Fn,Gn,Hn,Kn,Pnm1,Pn_nm1,Pn,Q,R,I_KH = cache[i]\n",
     "\n",
     "        # dL/dPn|(n-1)\n",
     "        dL_dPn_nm1 = multi_dot([I_KH.T,dL_dPn,I_KH])\n",
     "\n",
     "        # dL/dP(n-1)|(n-1)\n",
-    "        dL_dPnm1 = multi_dot([F.T,dL_dPn_nm1,F])\n",
+    "        dL_dPnm1 = multi_dot([Fn.T,dL_dPn_nm1,Fn])\n",
     "\n",
     "        # dL/dFn\n",
-    "        dL_dFn = 2*multi_dot([dL_dPn_nm1, F, Pnm1])\n",
+    "        dL_dFn = 2*multi_dot([dL_dPn_nm1, Fn, Pnm1])\n",
     "\n",
     "        # dL/dGn\n",
-    "        dL_dGn = 2*multi_dot([dL_dPn_nm1, G, Q])\n",
+    "        dL_dGn = 2*multi_dot([dL_dPn_nm1, Gn, Q])\n",
     "\n",
     "        # dL/dHn\n",
-    "        dL_dHn = -2*multi_dot([Pn, dL_dPn, Pn, H.T, matinv(R)])\n",
+    "        dL_dHn = -2*multi_dot([Pn, dL_dPn, Pn, Hn.T, matinv(R)])\n",
     "\n",
     "        # dL/dRn\n",
     "        dL_dRn = None # the paper calculates this term, but our implementation \n",
     "                      # does not have Rn depending on x\n",
+    "\n",
+    "        # append all results\n",
+    "        dmat.append((dL_dPn,dL_dPn_nm1,dL_dFn,dL_dGn,dL_dHn))\n",
+    "\n",
+    "        # make current\n",
+    "        dL_dPn = dL_dPnm1\n",
+    "\n",
+    "    for i in np.arange(n_pass-1,-1,-1):\n",
     "        \n",
     "        # compute gradient for u, element-wise\n",
     "        dL_du = np.zeros((u_dim,1))\n",
@@ -203,9 +355,13 @@
     "            tmp[i] = dt\n",
     "            dL_du[i,0] = np.trace(multi_dot([dL_dxn.T,tmp]))\n",
     "\n",
-    "        dL_dx = np.zeros((x_dim,1))\n",
+    "        dL_dxnm1 = np.zeros((x_dim,1))\n",
     "        for i in range(x_dim):\n",
-    "            \n",
+    "            pass\n",
+    "        \n",
+    "\n",
+    "        \n",
+    "        dL_dxn = dL_dxnm1\n",
     "\n",
     "\n",
     "\n",
@@ -400,7 +556,6 @@
    "outputs": [],
    "source": [
     "from sympy import symbols, Matrix, BlockMatrix\n",
-    "import numpy as np\n",
     "from sympy import cos as c\n",
     "from sympy import sin as s\n",
     "from sympy import diff"
@@ -446,7 +601,6 @@
     "                 [0,     0,    1]])\n",
     "trobot = Matrix([[xr],[yr],[0]])\n",
     "tmp = Matrix(BlockMatrix([Rrobot,trobot]))\n",
-    "tmp \n",
     "Trobot = Matrix([[tmp],[0,0,0,1]])\n",
     "Trobot\n"
    ]
